--- a/libs/numpy/test/SConscript
+++ b/libs/numpy/test/SConscript
@@ -31,9 +31,9 @@ for name in ("dtype", "ufunc", "templates", "ndarray", "indexing", "shapes"):
     mod = test_env.LoadableModule("%s_mod" % name, "%s_mod.cpp" % name, LDMODULEPREFIX="")
     if os.name == 'nt':
         # Move the module to have the correct name.
-        mod = env.Command(os.path.join('#libs', 'numpy', 'test', "%s_mod.pyd" % (name)),
+        mod = env.Command(os.path.join(Dir('.').srcnode().abspath, "%s_mod.pyd" % (name)),
                           mod,
-                          Move(os.path.join('libs', 'numpy', 'test', "%s_mod.pyd" % (name)), mod[0]))
+                          Move(os.path.join(Dir('.').srcnode().abspath, "%s_mod.pyd" % (name)), mod[0]))
     test.extend(PythonUnitTest(test_env, "%s.py" % name, mod))
 
 Return("test")
